refactor: поправил api open
